<resources>
    <string name="app_name">DietGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_food_list">Besin Listesi</string>
    <string name="title_activity_calorie_summary">Alınan Kaloriler</string>
    <string name="title_activity_list2">Besin Listesi</string>
    <string name="karbonhidrat">Karbonhidrat</string>
    <string name="protein">Protein</string>
    <string name="yag">Yağ</string>

    <string name="meal_prompt">Öğün Seçiniz</string>

    <string-array name="meals">
        <item>Kahvaltı</item>
        <item>Öğle Yemeği</item>
        <item>Akşam Yemeği</item>
        <item>Atıştırma</item>

    </string-array>
    <string name="title_activity_weight">Kilo</string>
    <string name="title_activity_weight_add">Kilo Ekle</string>
    <string name="title_activity_register">Üye Ol</string>
    <string name="title_activity_insert_food">Besin Ekle</string>
    <string name="title_activity_insert_custom_food">Besin Ekle</string>
    <string name="title_activity_restoranbul">Restoran Bul</string>
    <string name="title_activity_activities">Aktivite Kalori Hesaplama</string>
    <string name="title_activity_walk">Yürüme Mesafesi</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="distance_label">Mesafe</string>
    <string name="duration_label">Süre</string>
    <string name="average_speed_label">Ort. Hız</string>

    <string name="distance_text">0.0</string>
    <string name="duration_text">0.0</string>
    <string name="average_speed_text">0.0</string>


    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Aktivite Başlat</string>
    <string name="stop_updates">Aktivite Durdur</string>
    <string name="location_updated_message">Location updated</string>
</resources>
