<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10sp" >


    <Button
        android:id="@+id/btn_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Food Name"
        android:id="@+id/foodTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0 kcal"
        android:id="@+id/foodCalorieTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold" />


    <TableLayout
        android:id="@+id/tabla_cuerpo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/karbonhidrat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/protein"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yag"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"></TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/foodKarbonhidratTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0 gr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:layout_marginRight="40dp"></TextView>

            <TextView
                android:id="@+id/foodProteinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0 gr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"></TextView>

            <TextView
                android:id="@+id/foodFatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="0 gr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"></TextView>

        </TableRow>

    </TableLayout>




</LinearLayout>


